--- a/Python Basics 0.01.ipynb
+++ b/Python Basics 0.01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "87a8e1ee",
+   "id": "e61d26cc",
    "metadata": {},
    "source": [
     "# hi"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "574fe6ec",
+   "id": "56f7c2c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d0babf36",
+   "id": "6198381a",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2cfc70c1",
+   "id": "40db8ecf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "65881ae5",
+   "id": "cf47ad22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "021409bb",
+   "id": "82ce609d",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "860357f1",
+   "id": "a3880c0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "2d37eff5",
+   "id": "4442c170",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "6ebf94a2",
+   "id": "2f4ba8e9",
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "46f67728",
+   "id": "c10021db",
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41169fb8",
+   "id": "6c9431e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c16f0c08",
+   "id": "d85e8f7e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "121eefa6",
+   "id": "43347012",
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "73a3288f",
+   "id": "f4fbad4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "90a37b8d",
+   "id": "743f757a",
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "fc49c994",
+   "id": "12499efb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "658a542f",
+   "id": "4b61ffe9",
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "65a5f5da",
+   "id": "650f63bd",
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "292cd39f",
+   "id": "340e1fde",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "168bb879",
+   "id": "eb6221e0",
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "fb7c709a",
+   "id": "fc07ca27",
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "e06ea758",
+   "id": "88b9c74d",
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "2737a0da",
+   "id": "bdeb4ab5",
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "67da3d7a",
+   "id": "d6eff004",
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "7207bc09",
+   "id": "37793337",
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dd775fb8",
+   "id": "e9a1106f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "8f9658d0",
+   "id": "28899b85",
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58ab87e8",
+   "id": "27f4d7b5",
    "metadata": {},
    "source": [
     "# Vowels"
@@ -504,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "479163d2",
+   "id": "2297f77f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "24981732",
+   "id": "beb9c37a",
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "b4bca984",
+   "id": "5b7599eb",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "3be3b852",
+   "id": "6360ed50",
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b6ba3cf",
+   "id": "0c249255",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "7665207f",
+   "id": "594c8070",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "7c72c5df",
+   "id": "a986c25b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "a09423c9",
+   "id": "3ce04f2e",
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2a1c0835",
+   "id": "f67c235e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4051eb30",
+   "id": "ce6a99b0",
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "e480ddc2",
+   "id": "669435e6",
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0cc8e2f8",
+   "id": "d0fa2fb6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ac27eb96",
+   "id": "28437625",
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9debf8ca",
+   "id": "c4441c9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,7 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "83914b0e",
+   "id": "bc99d18e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,7 +767,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e0315ca4",
+   "id": "b89687f0",
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c91f831b",
+   "id": "545997dd",
    "metadata": {},
    "outputs": [
     {
@@ -831,8 +831,181 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "id": "0277ace5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "upp_lat=0\n",
+    "low_lat=0\n",
+    "dig=0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "609199bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for char in str1:\n",
+    "    if char.isupper():\n",
+    "        upp_lat +=1\n",
+    "        \n",
+    "    elif char.islower():\n",
+    "        low_lat +=1\n",
+    "        \n",
+    "    elif char.isdigit():\n",
+    "        dig +=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "f5354283",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Uppercase Letters  2\n",
+      "Lowercase Latters 12\n",
+      "The digits are 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Uppercase Letters \",upp_lat)\n",
+    "print(f\"Lowercase Latters {low_lat}\")\n",
+    "#print(\"The digits are \".format(dig))\n",
+    "print(f\"The digits are {dig}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "eee080d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Mohit Janbandhu 12345'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "99d89d70",
+   "id": "b8ee70f9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db93d3c5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "8a80929f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Human():\n",
+    "    def male():\n",
+    "        print(\"Short Hair\")\n",
+    "        \n",
+    "    def female():\n",
+    "        print(\"Long Hair\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "0d45ee39",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Short Hair\n"
+     ]
+    }
+   ],
+   "source": [
+    "Human.male()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8027c2f6",
+   "metadata": {},
+   "source": [
+    "We can Use self also in function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04c8eca0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str1.startswith(M)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0099480",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15933329",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fb35618",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdf6cc94",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed46155c",
    "metadata": {},
    "outputs": [],
    "source": []
