--- a/NumPy and Pandas.ipynb
+++ b/NumPy and Pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ac6c9a68",
+   "id": "45f45eb0",
    "metadata": {},
    "source": [
     "# NumPy"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22c06ba4",
+   "id": "72a1ef32",
    "metadata": {},
    "source": [
     "Astyppe"
@@ -18,8 +18,491 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "e8478311",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "D=23566\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "83780281",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8c3d7837",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "M=np.array(D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5b32f8cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(M)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ca9265a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N=M.astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "034d6fe6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(N)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d9db8cf1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(23566)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "N\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "93d41e1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " M=[[[1,2,3,]]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "dccf1e81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "M=np.array(M)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "4a188f5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1, 2, 3]]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "M"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "3f196487",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('int32')"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "M.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "db0b3ee4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "M.ndim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "15ed3315",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matrix = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+    "print(matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "ea299357",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([], dtype=int32)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arang=np.arange(10)\n",
+    "arang"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "7cdd2ef0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrix[2,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "feb810da",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrix[1,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "a12caaa8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 6, 9])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrix[:,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "7ab0283e",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2356803744.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[42], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    matrix[:[1:2]]\u001b[0m\n\u001b[1;37m              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "matrix[:[1:2]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "e2349ef8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[5, 6],\n",
+       "       [8, 9]])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrix[1:3,1:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "beae1713",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[5, 6],\n",
+       "       [8, 9]])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrix[1:3,1:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "1a432245",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[5, 6]])"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrix[1:2,1:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "64ac536b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6],\n",
+       "       [7, 8, 9]])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96f4fd4e",
+   "metadata": {},
+   "source": [
+    "# Lambda"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfb33096",
+   "metadata": {},
+   "source": [
+    "# Arange"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e49b16b",
+   "metadata": {},
+   "source": [
+    "# linSpace"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "25236c97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "line=np.linspace(2,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "32727814",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2.        , 2.06122449, 2.12244898, 2.18367347, 2.24489796,\n",
+       "       2.30612245, 2.36734694, 2.42857143, 2.48979592, 2.55102041,\n",
+       "       2.6122449 , 2.67346939, 2.73469388, 2.79591837, 2.85714286,\n",
+       "       2.91836735, 2.97959184, 3.04081633, 3.10204082, 3.16326531,\n",
+       "       3.2244898 , 3.28571429, 3.34693878, 3.40816327, 3.46938776,\n",
+       "       3.53061224, 3.59183673, 3.65306122, 3.71428571, 3.7755102 ,\n",
+       "       3.83673469, 3.89795918, 3.95918367, 4.02040816, 4.08163265,\n",
+       "       4.14285714, 4.20408163, 4.26530612, 4.32653061, 4.3877551 ,\n",
+       "       4.44897959, 4.51020408, 4.57142857, 4.63265306, 4.69387755,\n",
+       "       4.75510204, 4.81632653, 4.87755102, 4.93877551, 5.        ])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "line"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56633ac2",
+   "metadata": {},
+   "source": [
+    "# Random"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b2e29e7",
+   "metadata": {},
+   "source": [
+    "- rand\n",
+    "- randn\n",
+    "\n",
+    " - randint"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "505957cd",
+   "id": "a80d8dd3",
    "metadata": {},
    "outputs": [],
    "source": []
