--- a/Python Basics 0.01.ipynb
+++ b/Python Basics 0.01.ipynb
@@ -1153,7 +1153,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "739bc591",
+   "id": "095e4504",
    "metadata": {},
    "outputs": [
     {
@@ -1184,7 +1184,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0ad40a63",
+   "id": "48bbc17b",
    "metadata": {},
    "outputs": [
     {
@@ -1215,7 +1215,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "913177f0",
+   "id": "8eaefa50",
    "metadata": {},
    "outputs": [
     {
@@ -1243,7 +1243,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b82e2ac4",
+   "id": "7dd41e7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1253,7 +1253,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e9c3512a",
+   "id": "d2ae3a6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1275,7 +1275,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a9266f60",
+   "id": "6d2d5ba9",
    "metadata": {},
    "outputs": [
     {
@@ -1296,7 +1296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cc34fa9",
+   "id": "63e77d5e",
    "metadata": {},
    "source": [
     "# Radius"
@@ -1305,7 +1305,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "363d4986",
+   "id": "2d0b1f42",
    "metadata": {},
    "outputs": [
     {
@@ -1326,7 +1326,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "39d2f453",
+   "id": "aae5b4e5",
    "metadata": {},
    "outputs": [
     {
@@ -1344,7 +1344,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "0f1d0219",
+   "id": "5d0c8363",
    "metadata": {},
    "outputs": [
     {
@@ -1362,7 +1362,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "b0f68365",
+   "id": "3dbf66be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1372,7 +1372,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "d5e0d2dd",
+   "id": "b1b7ae10",
    "metadata": {},
    "outputs": [
     {
@@ -1392,7 +1392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3d45f6a",
+   "id": "9f825f0f",
    "metadata": {},
    "source": [
     "# Hello"
@@ -1401,7 +1401,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "a844f5c5",
+   "id": "c8b118bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1411,7 +1411,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "c2993c80",
+   "id": "4c1ebb47",
    "metadata": {},
    "outputs": [
     {
@@ -1432,7 +1432,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "56dac358",
+   "id": "50f66a66",
    "metadata": {},
    "outputs": [
     {
@@ -1454,7 +1454,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "660af5d2",
+   "id": "b938c284",
    "metadata": {},
    "outputs": [
     {
@@ -1475,7 +1475,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "7c417e42",
+   "id": "3970b025",
    "metadata": {},
    "outputs": [
     {
@@ -1497,7 +1497,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "fa65dc70",
+   "id": "32af8696",
    "metadata": {},
    "outputs": [
     {
@@ -1519,7 +1519,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "caf7b7b9",
+   "id": "3d554829",
    "metadata": {},
    "outputs": [
     {
@@ -1540,7 +1540,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "6ec5252b",
+   "id": "78681e05",
    "metadata": {},
    "outputs": [
     {
@@ -1561,7 +1561,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "8d0e0922",
+   "id": "3d74c755",
    "metadata": {},
    "outputs": [
     {
@@ -1582,7 +1582,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "0861158d",
+   "id": "bbab1822",
    "metadata": {},
    "outputs": [
     {
@@ -1603,7 +1603,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "5bfb1ba3",
+   "id": "7a5b062c",
    "metadata": {},
    "outputs": [
     {
@@ -1624,7 +1624,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "b5d0196c",
+   "id": "4c78ca3e",
    "metadata": {},
    "outputs": [
     {
@@ -1646,7 +1646,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "4bdd2171",
+   "id": "f1a36f98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1656,7 +1656,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "75d16d5a",
+   "id": "aad0f35f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1666,7 +1666,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "056f06d0",
+   "id": "2b6911b9",
    "metadata": {},
    "outputs": [
     {
@@ -1686,7 +1686,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4143419",
+   "id": "db350d27",
    "metadata": {},
    "source": [
     "# print 0945626"
@@ -1695,7 +1695,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "d7954102",
+   "id": "98e4f7c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1704,7 +1704,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bbb8b5b",
+   "id": "f2f6145b",
    "metadata": {},
    "source": [
     "mo\n"
@@ -1713,7 +1713,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "7ced631e",
+   "id": "1a71e361",
    "metadata": {},
    "outputs": [
     {
@@ -1735,7 +1735,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "c4007462",
+   "id": "51885e2a",
    "metadata": {},
    "outputs": [
     {
@@ -1755,7 +1755,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "0ae301d4",
+   "id": "7040c981",
    "metadata": {},
    "outputs": [
     {
@@ -1776,7 +1776,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "f489349d",
+   "id": "77e21da1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1786,7 +1786,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "fd31b151",
+   "id": "7490913b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1796,7 +1796,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "4a8c80da",
+   "id": "8564fe54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1806,7 +1806,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "36d3afa2",
+   "id": "6a748f0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1816,7 +1816,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "c9d6f2fb",
+   "id": "3490b1df",
    "metadata": {},
    "outputs": [
     {
@@ -1834,7 +1834,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "168e7883",
+   "id": "4982492c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1844,7 +1844,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "452a3cca",
+   "id": "375b0325",
    "metadata": {},
    "outputs": [
     {
@@ -1862,7 +1862,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "c9b6495f",
+   "id": "16b7b2e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1872,7 +1872,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "e30acd18",
+   "id": "193638d7",
    "metadata": {},
    "outputs": [
     {
@@ -1893,7 +1893,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "5ea4b812",
+   "id": "d1f6310e",
    "metadata": {},
    "outputs": [
     {
@@ -1914,7 +1914,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "221903b9",
+   "id": "ff3d1338",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1924,7 +1924,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "715f3291",
+   "id": "ac719a23",
    "metadata": {},
    "outputs": [
     {
@@ -1945,7 +1945,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "5ce27eb9",
+   "id": "add8d92a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1955,7 +1955,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "d62f9708",
+   "id": "1accf372",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1966,7 +1966,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "55b92375",
+   "id": "7fee2a40",
    "metadata": {},
    "outputs": [
     {
@@ -1986,16 +1986,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15c8da51",
+   "id": "b8145917",
    "metadata": {},
    "source": [
-    "# Random"
+    "# Class"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b07e207",
+   "id": "5ad92186",
    "metadata": {},
    "outputs": [],
    "source": []
