--- a/NumPy and Pandas.ipynb
+++ b/NumPy and Pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "45f45eb0",
+   "id": "80692d0d",
    "metadata": {},
    "source": [
     "# NumPy"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72a1ef32",
+   "id": "d4ee3267",
    "metadata": {},
    "source": [
     "Astyppe"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e8478311",
+   "id": "6dc0e688",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "83780281",
+   "id": "45395150",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8c3d7837",
+   "id": "38abff52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5b32f8cb",
+   "id": "a03c5d34",
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ca9265a7",
+   "id": "6d63b56e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "034d6fe6",
+   "id": "f9897fe6",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d9db8cf1",
+   "id": "ce5da9d1",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "93d41e1c",
+   "id": "765af6dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "dccf1e81",
+   "id": "43dd3863",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "4a188f5e",
+   "id": "c376094b",
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "3f196487",
+   "id": "098a6827",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "db0b3ee4",
+   "id": "50f54524",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "15ed3315",
+   "id": "99033c8b",
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "ea299357",
+   "id": "19fc88e3",
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "7cdd2ef0",
+   "id": "b97bdc81",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "feb810da",
+   "id": "f7be91d7",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "a12caaa8",
+   "id": "e50014d8",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "7ab0283e",
+   "id": "02715ee1",
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "e2349ef8",
+   "id": "45f54397",
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "beae1713",
+   "id": "91e00eac",
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "1a432245",
+   "id": "fed620a5",
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "64ac536b",
+   "id": "abe4e0b7",
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96f4fd4e",
+   "id": "26eeb1d5",
    "metadata": {},
    "source": [
     "# Lambda"
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfb33096",
+   "id": "692f4587",
    "metadata": {},
    "source": [
     "# Arange"
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e49b16b",
+   "id": "7d985a8d",
    "metadata": {},
    "source": [
     "# linSpace"
@@ -443,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "25236c97",
+   "id": "e335b619",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "32727814",
+   "id": "2ce78f80",
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56633ac2",
+   "id": "d1546e03",
    "metadata": {},
    "source": [
     "# Random"
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b2e29e7",
+   "id": "3da49b5e",
    "metadata": {},
    "source": [
     "- rand\n",
@@ -501,8 +501,129 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 70,
+   "id": "10b3ae41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " \n",
+    "mo=np.random.randint(20,50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "d6b20d49",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "e0b9be06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " \n",
+    "mo=np.random.randint(20,50,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "ccf7eabb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([26, 24, 28, 42, 31])"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "f42e497c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "moh=np.random.rand(1,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "48abb7cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.86735009, 0.62302117, 0.8967768 , 0.65375793, 0.83672671,\n",
+       "        0.7140556 , 0.968796  , 0.81708477, 0.85744029, 0.72993001]])"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "moh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "74c92b14",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.87635527, 0.96587882, 0.13113561, 0.65385909, 0.45261577,\n",
+       "        0.1767949 , 0.89989253, 0.65659353, 0.49581919, 0.28601867],\n",
+       "       [0.43028071, 0.93834142, 0.11654281, 0.78797355, 0.96462381,\n",
+       "        0.60169963, 0.56786245, 0.98895576, 0.83513478, 0.58066884]])"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mohi=np.random.rand(2,10)\n",
+    "mohi"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a80d8dd3",
+   "id": "d56e22a0",
    "metadata": {},
    "outputs": [],
    "source": []
