--- a/First-Apr/Python/Just.ipynb
+++ b/First-Apr/Python/Just.ipynb
@@ -276,9 +276,226 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d24caf5c",
+   "metadata": {},
+   "source": [
+    "Write a program to slice a string str=\"Hello Everyone\" to get the following output:\n",
+    "\n",
+    "    'Hello'\n",
+    "    'yone'\n",
+    "    vE oll'\n",
+    "    'Eeyn'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d17777b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str1=\"Hello Everyone\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b7ef19f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str1[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "3891d653",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'yone'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str1[10:14]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "8b74e3d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vE oll\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(str1[7:1:-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f0bfe896",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Eeyn'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str1[6:13:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "12a5b3e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str1[-7:]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58db1f5f",
+   "id": "78b70252",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "067921ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec40f3ae",
+   "metadata": {},
+   "source": [
+    "4) We have variable x=22+5j. Can you check the type of variable x?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "3baa17a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=22+5j"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "21703e7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "complex"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "cd7f04a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number: 9\n",
+      "9 is not a prime number.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_prime(num):\n",
+    "    if num <= 1:\n",
+    "        return False\n",
+    "    for i in range(2, int(num**0.5) + 1):\n",
+    "        if num % i == 0:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "num = int(input(\"Enter a number: \"))\n",
+    "if is_prime(num):\n",
+    "    print(num, \"is a prime number.\")\n",
+    "else:\n",
+    "    print(num, \"is not a prime number.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8a6a1c7",
    "metadata": {},
    "outputs": [],
    "source": []
