--- a/First-Apr/Python/Just.ipynb
+++ b/First-Apr/Python/Just.ipynb
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d24caf5c",
+   "id": "e75cabc5",
    "metadata": {},
    "source": [
     "Write a program to slice a string str=\"Hello Everyone\" to get the following output:\n",
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d17777b4",
+   "id": "e77a3aeb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b7ef19f4",
+   "id": "8d7ff4fc",
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3891d653",
+   "id": "f9539a49",
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "8b74e3d1",
+   "id": "cbfd4712",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "f0bfe896",
+   "id": "ded4255a",
    "metadata": {
     "scrolled": true
    },
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "12a5b3e0",
+   "id": "75a7db6a",
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78b70252",
+   "id": "2e6608c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "067921ec",
+   "id": "63146d68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec40f3ae",
+   "id": "54b7f932",
    "metadata": {},
    "source": [
     "4) We have variable x=22+5j. Can you check the type of variable x?"
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "3baa17a8",
+   "id": "e39ebbbf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "21703e7a",
+   "id": "77911366",
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "cd7f04a7",
+   "id": "28ad4c07",
    "metadata": {},
    "outputs": [
     {
@@ -494,8 +494,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 40,
+   "id": "ada48408",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bangalore\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = {'1': 'One', '2': [1, {'Two': ['Ch', 'Cbe', 'Salem', {'Place': [5, 6, 7, 'Bangalore']}]}]}\n",
+    "bangalore = d['2'][1]['Two'][3]['Place'][3]\n",
+    "print(bangalore)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "6189ac22",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Q11: Generate a list of all even numbers between 4 to 30\n",
+    "even_numbers = [i for i in range(4, 31) if i % 2 == 0]\n",
+    "print(even_numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b8a6a1c7",
+   "id": "405c2657",
    "metadata": {},
    "outputs": [],
    "source": []
