--- a/First-Apr/Python/Just2nd.ipynb
+++ b/First-Apr/Python/Just2nd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c0cc9751",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "23ed7537",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter number5 4 8 8 4 8 \n"
+      "Enter number5 5 5 5 8 9\n",
+      "5 is odd number\n",
+      "5 is odd number\n",
+      "5 is odd number\n",
+      "5 is odd number\n",
+      "8 is even number\n",
+      "9 is odd number\n"
      ]
     }
    ],
@@ -82,7 +88,11 @@
     "    if number %2==0:\n",
     "        print(f\"{number} is even number\")\n",
     "    else:\n",
-    "        print(f\"{number} is odd number\")"
+    "        print(f\"{number} is odd number\")\n",
+    "        \n",
+    "        # Loop through the list and check each number\n",
+    "for n in num:\n",
+    "    even_num(n)"
    ]
   },
   {
@@ -177,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "96094fb3",
    "metadata": {},
    "outputs": [
@@ -187,7 +197,7 @@
        "'Mohit Janbandhu 12345'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "id": "d3ad8be0",
    "metadata": {},
    "outputs": [],
@@ -208,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "id": "2bf65372",
    "metadata": {},
    "outputs": [
@@ -218,7 +228,7 @@
        "['Mohit', 'Janbandhu', '12345']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "56e6a37e",
    "metadata": {},
    "outputs": [],
@@ -239,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "id": "00946222",
    "metadata": {},
    "outputs": [
@@ -249,7 +259,7 @@
        "['12345', 'Janbandhu', 'Mohit']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,8 +270,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "1f4ec5b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p=' '.join(o)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ad1d7ddc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'12345 Janbandhu Mohit'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "226712d7",
    "metadata": {},
    "outputs": [],
    "source": []
