--- a/First-Apr/Python/Just2nd.ipynb
+++ b/First-Apr/Python/Just2nd.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "23ed7537",
    "metadata": {},
    "outputs": [
@@ -72,17 +72,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter number5 5 5 5 8 9\n",
+      "Enter number5 4 8 4 8\n",
       "5 is odd number\n",
-      "5 is odd number\n",
-      "5 is odd number\n",
-      "5 is odd number\n",
+      "4 is even number\n",
       "8 is even number\n",
-      "9 is odd number\n"
+      "4 is even number\n",
+      "8 is even number\n"
      ]
     }
    ],
    "source": [
+    "# A function which takes a list of integers as input and returns a list of even numbers from the list.mm\n",
+    "\n",
     "num=list(map(int, input(\"Enter number\").split()))\n",
     "def even_num(number):\n",
     "    if number %2==0:\n",
@@ -281,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ad1d7ddc",
+   "id": "0802b1eb",
    "metadata": {},
    "outputs": [
     {
@@ -300,12 +301,95 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ff89e288",
+   "metadata": {},
+   "source": [
+    "### A function which takes a list of integers as input and returns a list of even numbers from the list.mm\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "226712d7",
+   "execution_count": 14,
+   "id": "d84d908b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter number with space4 8 7 9 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_list=list(map(int,input(\"Enter number with space\").split()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "3d9aafe4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def ev_num(number):\n",
+    "    for num in number:\n",
+    "        if number %2==0:\n",
+    "            print(f\"{number} is Even\")\n",
+    "        else:\n",
+    "            print(f\"{number} is odd\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "eadcf201",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[19], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m n \u001b[38;5;129;01min\u001b[39;00m input_list:\n\u001b[1;32m----> 2\u001b[0m     \u001b[43mev_num\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[16], line 2\u001b[0m, in \u001b[0;36mev_num\u001b[1;34m(number)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mev_num\u001b[39m(number):\n\u001b[1;32m----> 2\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m num \u001b[38;5;129;01min\u001b[39;00m number:\n\u001b[0;32m      3\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m number \u001b[38;5;241m%\u001b[39m\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m      4\u001b[0m             \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnumber\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is Even\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not iterable"
+     ]
+    }
+   ],
+   "source": [
+    "for n in input_list:\n",
+    "    ev_num(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6837a9a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Taking 5 numbers as input\n",
+    "num = list(map(int, input(\"Enter 5 numbers separated by space: \").split()))\n",
+    "\n",
+    "# Check if exactly 5 numbers are entered\n",
+    "if len(num) != 5:\n",
+    "    print(\"Please enter exactly 5 numbers.\")\n",
+    "else:\n",
+    "    # Function to check even or odd\n",
+    "    def even_num(number):\n",
+    "        if number % 2 == 0:\n",
+    "            print(f\"{number} is an even number\")\n",
+    "        else:\n",
+    "            print(f\"{number} is an odd number\")\n",
+    "    \n",
+    "    # Loop through the list and check each number\n",
+    "    for n in num:\n",
+    "        even_num(n)"
+   ]
   }
  ],
  "metadata": {
