--- a/First-Apr/Python/Just2nd.ipynb
+++ b/First-Apr/Python/Just2nd.ipynb
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0802b1eb",
+   "id": "fa68b5a9",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff89e288",
+   "id": "cf886954",
    "metadata": {},
    "source": [
     "### A function which takes a list of integers as input and returns a list of even numbers from the list.mm\n"
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d84d908b",
+   "id": "faff4c45",
    "metadata": {},
    "outputs": [
     {
@@ -328,35 +328,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "3d9aafe4",
+   "execution_count": 21,
+   "id": "c224c3eb",
    "metadata": {},
    "outputs": [],
    "source": [
     "def ev_num(number):\n",
-    "    for num in number:\n",
-    "        if number %2==0:\n",
-    "            print(f\"{number} is Even\")\n",
-    "        else:\n",
-    "            print(f\"{number} is odd\")"
+    "    if number %2==0:\n",
+    "        print(f\"{number} is Even\")\n",
+    "    else:\n",
+    "        print(f\"{number} is odd\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "eadcf201",
+   "execution_count": 24,
+   "id": "0b1bc2fb",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'int' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[19], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m n \u001b[38;5;129;01min\u001b[39;00m input_list:\n\u001b[1;32m----> 2\u001b[0m     \u001b[43mev_num\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[16], line 2\u001b[0m, in \u001b[0;36mev_num\u001b[1;34m(number)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mev_num\u001b[39m(number):\n\u001b[1;32m----> 2\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m num \u001b[38;5;129;01min\u001b[39;00m number:\n\u001b[0;32m      3\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m number \u001b[38;5;241m%\u001b[39m\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m      4\u001b[0m             \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnumber\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is Even\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not iterable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number8 9 8 9 8 \n"
+     ]
+    }
+   ],
+   "source": [
+    "input_list2=list(map(int,input(\"Enter Number\").split()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "f9bd701d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ev_od (number):\n",
+    "    if number %2==0:\n",
+    "        print(f\"{number} is Even\")\n",
+    "    else:\n",
+    "        print(f\"{number} is odd\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "cd30658d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8 is Even\n",
+      "9 is odd\n",
+      "8 is Even\n",
+      "9 is odd\n",
+      "8 is Even\n"
+     ]
+    }
+   ],
+   "source": [
+    "for n in input_list2:\n",
+    "    ev_od(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5aed4d98",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89b21ca3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "863d8730",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a126f5f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "63ba151c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 is Even\n",
+      "8 is Even\n",
+      "7 is odd\n",
+      "9 is odd\n",
+      "5 is odd\n"
      ]
     }
    ],
@@ -368,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6837a9a3",
+   "id": "c271330c",
    "metadata": {},
    "outputs": [],
    "source": [
